--- a/d3/index.html
+++ b/d3/index.html
@@ -3,13 +3,11 @@
 <head>
 <meta charset="utf-8">
 <title></title>
+<link rel="stylesheet" href="./index.css">
 <script src="https://d3js.org/d3.v5.js"></script>
 </head>
 <body>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
+<div id="chart"></div>
 </body>
 <script src="./index.js" charset="utf-8"></script>
 </html>
