--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
-        <h1>git版本管理工具</h1>
-        <h2>git分支</h2>
-        <h3>修改分支</h3>
-    </body>
+<head>
+<meta charset="utf-8">
+<title></title>
+</head>
+<body>
+<script type="text/javascript">
+function User(){
+    function initName(){
+        this.name = '张三'
+    }
+    initName()
+};
+var a = new User
+console.log(a.name);
+
+</script>
+</body>
 </html>
