--- a/demo.html
+++ b/demo.html
@@ -44,11 +44,12 @@ section{
     </footer>
 </body>
 <script type="text/javascript">
-$('.sy').click(function(){
-    $.ajax({
-        type:"git",
-        url:""
-    })
-})
+// $('.sy').click(function(){
+//     $.ajax({
+//         type:"git",
+//         url:""
+//     })
+// })
+console.log(document);
 </script>
 </html>
